[package]
name = "tundra"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A framework for building interactive applications for the terminal using Ratatui."
repository = "https://github.com/user-simon/tundra"
keywords = ["terminal", "tui", "ratatui"]
categories = ["command-line-interface"]

[dependencies]
bitvec = "1.0.1"
num-traits = "0.2.19"
ratatui = { version = "0.28.0", features = ["unstable-rendered-line-info"] }
